[package]
name = "radafi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"  # Check for the latest version on crates.io
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
minimp3 = "0.5"
thiserror = "1.0"
futures = "0.3.30"
bytemuck = "1.7"